[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Cutscene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GameOverCutscene.gd" type="Script" id=2]
[ext_resource path="res://Fonts/mangat.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "showButtons"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Cutscene/Margin2/VBox/HBox/RetryButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cutscene/Margin2/VBox/HBox/QuitButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOverCutscene" type="Node"]
script = ExtResource( 2 )

[node name="Cutscene" parent="." instance=ExtResource( 1 )]

[node name="Margin2" type="MarginContainer" parent="Cutscene"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 70.0
margin_bottom = -70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Cutscene/Margin2"]
margin_right = 1366.0
margin_bottom = 628.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Cutscene/Margin2/VBox"]
margin_top = 548.0
margin_right = 1366.0
margin_bottom = 628.0
custom_constants/separation = 75
alignment = 1

[node name="RetryButton" type="Button" parent="Cutscene/Margin2/VBox/HBox"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 444.0
margin_right = 673.0
margin_bottom = 80.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Retry"
flat = true

[node name="QuitButton" type="Button" parent="Cutscene/Margin2/VBox/HBox"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 748.0
margin_right = 921.0
margin_bottom = 80.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "showButtons"
anims/showButtons = SubResource( 4 )

[connection signal="mouse_entered" from="Cutscene/Margin2/VBox/HBox/RetryButton" to="." method="_on_Button_mouse_entered" binds= [ "Retry" ]]
[connection signal="mouse_exited" from="Cutscene/Margin2/VBox/HBox/RetryButton" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Cutscene/Margin2/VBox/HBox/RetryButton" to="." method="_on_Button_pressed" binds= [ "Retry" ]]
[connection signal="mouse_entered" from="Cutscene/Margin2/VBox/HBox/QuitButton" to="." method="_on_Button_mouse_entered" binds= [ "Quit" ]]
[connection signal="mouse_exited" from="Cutscene/Margin2/VBox/HBox/QuitButton" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Cutscene/Margin2/VBox/HBox/QuitButton" to="." method="_on_Button_pressed" binds= [ "Quit" ]]
